compat issue fix